force-app/main/default/objects/SpecialCalculationMaster__c/SpecialCalculationMaster__c.object-meta.xml
<CustomObject>
    <description>特殊計算マスタ。特殊計算に使用する乗算値、加算値を定義する。</description>
    <label>特殊計算マスタ</label>
    <nameField>
        <label>特殊計算マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>