force-app/main/default/objects/SpecialCalculationMaster__c/fields/Addition__c.field-meta.xml
<CustomField>
    <fullName>Addition__c</fullName>
    <defaultValue>0</defaultValue>
    <label>加算値</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>