force-app/main/default/objects/SpecialCalculationMaster__c/fields/Multiplication__c.field-meta.xml
<CustomField>
    <fullName>Multiplication__c</fullName>
    <defaultValue>1</defaultValue>
    <label>乗算値</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>