force-app/main/default/objects/SpecialCalculationMaster__c/fields/SpecialSpecification_del__c.field-meta.xml
<CustomField>
    <fullName>SpecialSpecification_del__c</fullName>
    <label>特殊仕様</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SpecialSpecification</valueSetName>
    </valueSet>
</CustomField>